# 02456-deep-learning

./: .gitignore  README.md  Transfomer-3.ipynb  pyproject.toml
02456_dl_project/: RescaleMetrics.py  Transfomer_withscaled Dataloader.ipynb  TransformerModel.py  Transformer_Code.ipynb  batch_train.py  best_lstm_model.pt  configurations.py  dataloader.py  dependencies.toml  download.py  exploration.ipynb  files.py  linear_regression.ipynb  model_autoregressive_lstm.ipynb  model_baseline.py  model_lstm.ipynb  model_selection.py  model_seq2seq_transformer.py  model_seq2seq_transformer_ed.py  model_seq2seq_transformer_teacherforce.py  model_seq2seq_transformer_wodetach.py  paths.py  plot_trajectory.py  preprocessing.py  reproduce_results.ipynb  save_results.py  save_scalers.py  scaled_dataloader.py  scaler_unfiltered.save  splitdata.py  testing.ipynb  training.py  transformer_model.py  util.py  zip_reader.py
02456_dl_project/preprocessing and exploration/: preprocessing.py
