[project]
name = "02456-dl-project"
version = "0.1"
dependencies = [
    "pandas",
    "geopandas",
    "geodatasets",
    "shapely",
    "matplotlib",
    "PyQt6; sys_platform == 'linux'",
    "pyarrow",
    "ipykernel",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["02456_dl_project/*"]
